removed unsaved trips

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "15.5.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
+    "openai": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "unsplash-js": "^7.0.20"
