--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "@google/generative-ai": "^0.24.1",
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/typography": "^0.5.19",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "firebase": "^12.5.0",
     "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
     "googleapis": "^161.0.0",
+    "lucide-react": "^0.561.0",
+    "motion": "^12.23.26",
     "next": "15.5.3",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.10",
     "openai": "^6.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.4.0",
     "unsplash-js": "^7.0.20"
   },
   "devDependencies": {
@@ -39,6 +44,7 @@
     "eslint-config-next": "15.5.3",
     "prisma": "^5.22.0",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
